--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,26 @@ body,
   color: darkcyan;
   font-weight: bold;
 }
+
+.quote-display {
+  margin-bottom: 1rem;
+  margin-left: calc(1rem - 2px);
+  margin-right: calc(1rem + 2px);
+}
+
+.quote-input {
+  background-color: transparent;
+  border: 2px solid #008b8a;
+  outline: none;
+  width: 100%;
+  height: 8rem;
+  margin: auto;
+  resize: none;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+}
+
+.quote-input:focus {
+  border-color: black;
+}
